@@ -1,0 +1,3 @@
+Contents of this folder copied from Zyndric's pathtools toolbox on Github [1].
+
+[1] https://github.com/Zyndric/pathtools
